--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
     "bcryptjs": "^3.0.2",
+    "chart.js": "^4.4.9",
     "dist": "^0.1.2",
     "ionicons": "^7.4.0",
     "react": "19.0.0",
