--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.1",
   "type": "module",
-  "homepage": "https://sortonesangel.github.io/our-project-app-dev/",
+  "homepage": "https://github.com/sortonesangel/Our-Project-App-Dev",
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
